--- a/apps/client/Dockerfile
+++ b/apps/client/Dockerfile
@@ -1,39 +1,22 @@
-FROM node:16-alpine AS base
-
+FROM node:16-alpine
 
 EXPOSE 8080
 
 ENV NODE_ENV production
 ENV NODE_PORT 8080
 
-FROM base AS builder
-# Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
-RUN apk update
-# Set working directory
-WORKDIR /app
-RUN npm install turbo --global
-COPY . .
-RUN turbo prune --scope=client --docker
+WORKDIR /client
 
-# Add lockfile and package.json's of isolated subworkspace
-FROM base AS installer
-RUN apk add --no-cache libc6-compat
-RUN apk update
-WORKDIR /app
+COPY apps/client/next.config.js /client/apps/client/next.config.js
+COPY apps/client/next.config.prod.js /client/apps/client/next.config.prod.js
+COPY apps/client/package.json /client/apps/client/package.json
+COPY apps/client/public /client/apps/client/public
 
-# First install the dependencies (as they change less often)
-COPY .gitignore .gitignore
-COPY --from=builder /app/out/json/ .
-COPY --from=builder /app/out/package-lock.json ./package-lock.json
-RUN npm install
+COPY package.json /client
+COPY package-lock.json /client
 
-# Build the project
-COPY --from=builder /app/out/full/ .
-COPY /common /app/common
-COPY turbo.json turbo.json
+RUN npm ci --production --no-optional
 
+COPY apps/client/.next /client/apps/client/.next
 
-RUN npx turbo run build --filter=client...
-
-CMD cd /app/apps/client && npm run prod
+CMD cd /client/apps/client && npm run prod
