--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "concurrently": "7.6.0",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "turbo": "^1.10.2"
   }
 }
