--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -44,6 +44,7 @@
     "cookie-parser": "1.4.6",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
+    "eta": "^3.0.1",
     "express": "4.18.2",
     "handlebars": "4.7.7",
     "ical-generator": "3.6.1",
@@ -52,6 +53,7 @@
     "lodash": "4.17.21",
     "nanoid": "3.3.4",
     "nestjs-pino": "3.1.2",
+    "openai": "^3.3.0",
     "passport": "0.6.0",
     "passport-custom": "1.1.1",
     "passport-github2": "0.1.12",
@@ -70,6 +72,7 @@
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.3.9",
     "@openapitools/openapi-generator-cli": "2.6.0",
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/cache-manager": "4.0.2",
     "@types/cookie-parser": "1.4.3",
     "@types/express": "4.17.17",
