--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -25,35 +25,29 @@
   },
   "dependencies": {
     "@apalchys/pino-cloudwatch": "0.9.0",
-    "@aws-sdk/client-s3": "3.454.0",
-    "@nestjs/axios": "3.0.1",
-    "@nestjs/cache-manager": "2.1.1",
-    "@nestjs/common": "10.2.10",
-    "@nestjs/config": "3.1.1",
-    "@nestjs/core": "10.2.10",
-    "@nestjs/mapped-types": "2.0.4",
-    "@nestjs/passport": "10.0.2",
-    "@nestjs/platform-express": "10.2.10",
-    "@nestjs/schedule": "4.0.0",
-    "@nestjs/swagger": "7.1.16",
+    "@aws-sdk/client-s3": "3.717.0",
+    "@nestjs/axios": "3.1.3",
+    "@nestjs/cache-manager": "2.3.0",
+    "@nestjs/common": "10.4.6",
+    "@nestjs/config": "3.3.0",
+    "@nestjs/core": "10.4.6",
+    "@nestjs/mapped-types": "2.0.6",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.4.15",
+    "@nestjs/schedule": "4.0.2",
+    "@nestjs/swagger": "8.1.0",
     "@nestjs/typeorm": "10.0.1",
     "@sentry/node": "8.47.0",
-    "@swc/cli": "^0.1.63",
-    "@swc/core": "^1.3.96",
     "@vendia/serverless-express": "4.10.4",
-    "axios": "1.6.2",
     "cache-manager": "5.3.1",
     "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
-    "cookie-parser": "1.4.6",
-    "dayjs": "1.11.10",
-    "dotenv": "16.3.1",
+    "class-validator": "0.14.1",
+    "cookie-parser": "1.4.7",
     "express": "4.18.2",
     "handlebars": "4.7.8",
     "ical-generator": "5.0.0",
-    "json2csv": "5.0.3",
+    "json2csv": "5.0.7",
     "jsonwebtoken": "9.0.2",
-    "lodash": "4.17.21",
     "nanoid": "3.3.8",
     "nestjs-pino": "3.5.0",
     "openai": "4.19.0",
@@ -67,21 +61,19 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.5",
     "rxjs": "7.8.1",
-    "swagger-ui-express": "5.0.0",
-    "typeorm": "0.3.17"
+    "swagger-ui-express": "5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "10.2.1",
     "@nestjs/schematics": "10.0.3",
-    "@nestjs/testing": "10.2.10",
+    "@nestjs/testing": "10.4.6",
     "@openapitools/openapi-generator-cli": "2.15.3",
     "@types/cache-manager": "4.0.5",
     "@types/cookie-parser": "1.4.6",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.8",
-    "@types/json2csv": "5.0.6",
+    "@types/json2csv": "5.0.7",
     "@types/jsonwebtoken": "9.0.5",
-    "@types/lodash": "4.14.201",
     "@types/passport-github2": "1.2.9",
     "@types/passport-http": "0.3.11",
     "@types/passport-jwt": "3.0.13",
