--- a/package.json
+++ b/package.json
@@ -25,12 +25,21 @@
     "db:up": "podman compose -f ./setup/docker-compose.yml up  -d",
     "db:down": "podman compose -f ./setup/docker-compose.yml down"
   },
+  "dependencies": {
+    "axios": "1.7.9",
+    "dayjs": "^1.11",
+    "lodash": "4.17.21",
+    "typeorm": "0.3.20"
+  },
   "devDependencies": {
     "@total-typescript/ts-reset": "0.6.1",
     "@types/jest": "29.5.14",
-    "@types/node": "^20.17.10",
+    "@types/lodash": "4.17.13",
+    "@types/node": "20.17.10",
+    "dotenv": "^16",
     "eslint": "9.17.0",
     "eslint-config-turbo": "2.3.3",
+    "eslint-plugin-jest": "^28.10.0",
     "jest": "29.7.0",
     "prettier": "3.4.2",
     "turbo": "2.3.3",
