--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,10 @@
     "@apalchys/pino-cloudwatch": "0.9.0",
     "@koa/cors": "3.0.0",
     "@koa/router": "8.0.8",
-    "@vendia/serverless-express": "4.5.3",
-    "axios": "1.6.2",
-    "dotenv": "10.0.0",
+    "@vendia/serverless-express": "4.10.4",
     "http-status-codes": "2.1.4",
     "ics": "2.31.0",
-    "json2csv": "5.0.6",
+    "json2csv": "5.0.7",
     "jsonwebtoken": "8.5.1",
     "koa": "2.13.1",
     "koa-basic-auth": "4.0.0",
@@ -32,7 +30,6 @@
     "koa-passport": "5.0.0",
     "koa-session": "5.13.1",
     "koa-static": "5.0.0",
-    "lodash": "4.17.21",
     "luxon": "2.3.0",
     "moment-timezone": "0.5.34",
     "node-cache": "5.1.2",
@@ -42,11 +39,10 @@
     "passport-jwt": "4.0.0",
     "pg": "8.11.3",
     "pino-multi-stream": "4.2.0",
-    "reflect-metadata": "0.1.13",
-    "typeorm": "0.3.17"
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
-    "@types/json2csv": "5.0.3",
+    "@types/json2csv": "5.0.7",
     "@types/jsonwebtoken": "8.5.8",
     "@types/koa": "2.11.3",
     "@types/koa__cors": "2.2.3",
@@ -56,7 +52,6 @@
     "@types/koa-passport": "4.0.3",
     "@types/koa-session": "5.10.2",
     "@types/koa-static": "4.0.2",
-    "@types/lodash": "4.14.178",
     "@types/luxon": "2.0.9",
     "@types/node-schedule": "1.3.2",
     "@types/passport-github2": "1.2.5",
