fix: awslogs driver

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,6 +79,13 @@ services:
       - shared-network
     depends_on:
       - server
+    logging:
+      driver: awslogs
+      options:
+        awslogs-region: eu-central-1
+        awslogs-group: rsschool-app
+        awslogs-stream: nestjs
+        awslogs-create-group: 'true'
 
   nginx:
     container_name: nginx
