--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       RSSHCOOL_AUTH_GITHUB_CLIENT_SECRET: ${RSSHCOOL_API_AUTH_CLIENT_SECRET}
       RSSHCOOL_AUTH_GITHUB_WEBHOOK_ACTIVITY_SECRET: ${RSSHCOOL_AUTH_GITHUB_WEBHOOK_ACTIVITY_SECRET}
       RSSHCOOL_AUTH_JWT_SECRET_KEY: ${RSSHCOOL_API_SESSION_KEY}
+      RSSHCOOL_AUTH_GITHUB_INTEGRATION_SITE_TOKEN: ${RSSHCOOL_AUTH_GITHUB_INTEGRATION_SITE_TOKEN}
       RSSHCOOL_AWS_SECRET_ACCESS_KEY: ${RSSHCOOL_API_AWS_SECRET_ACCESS_KEY}
       RSSHCOOL_AWS_ACCESS_KEY_ID: ${RSSHCOOL_API_AWS_ACCESS_KEY_ID}
       RSSHCOOL_AWS_REGION: ${RSSHCOOL_AWS_REGION}
