--- a/nestjs/package.json
+++ b/nestjs/package.json
@@ -31,6 +31,7 @@
     "@nestjs/common": "10.4.6",
     "@nestjs/config": "3.3.0",
     "@nestjs/core": "10.4.6",
+    "@nestjs/event-emitter": "3.0.1",
     "@nestjs/mapped-types": "2.0.6",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.4.15",
