--- a/tools/sloths/package.json
+++ b/tools/sloths/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@intlify/vite-plugin-vue-i18n": "6.0.1",
     "eslint-import-resolver-typescript": "3.5.0",
     "file-saver": "2.0.5",
     "jszip": "3.10.1",
@@ -36,8 +37,7 @@
     "@types/file-saver": "2.0.5",
     "@types/node": "16.11.47",
     "@typescript-eslint/parser": "5.33.0",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@intlify/unplugin-vue-i18n": "6.0.5",
+    "@vitejs/plugin-vue": "3.0.1",
     "@vue/eslint-config-airbnb": "6.0.0",
     "@vue/eslint-config-prettier": "7.0.0",
     "@vue/eslint-config-typescript": "11.0.0",
@@ -51,8 +51,7 @@
     "npm-run-all": "4.1.5",
     "prettier": "2.7.1",
     "typescript": "4.7.4",
-    
-    "vite": "4.5.13",
+    "vite": "3.2.11",
     "vue-eslint-parser": "9.0.3",
     "vue-tsc": "0.39.5"
   }
