--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
       RSSHCOOL_PG_USERNAME: ${RSSHCOOL_PG_USERNAME}
       RSSHCOOL_PG_PASSWORD: ${RSSHCOOL_PG_PASSWORD}
       RSSHCOOL_PG_DATABASE: ${RSSHCOOL_PG_DATABASE}
-      RSSHCOOL_USERS_ADMINS: 'apalchys,dzmitry-varabei,mikhama,sonejka,aaliakseyenka,valerydluski,anik188'
+      RSSHCOOL_USERS_ADMINS: 'apalchys,dzmitry-varabei,mikhama,sonejka,aaliakseyenka,valerydluski,anik188,alreadybored'
       RSSHCOOL_USERS_HIRERS: ${RSSHCOOL_USERS_HIRERS}
       RSSHCOOL_AUTH_GITHUB_CALLBACK: ${RSSHCOOL_API_AUTH_CALLBACK}
       RSSHCOOL_AUTH_GITHUB_CLIENT_ID: ${RSSHCOOL_API_AUTH_CLIENT_ID}
