--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,10 @@
     "@ant-design/cssinjs": "^1.20.0",
     "@ant-design/icons": "5.5.2",
     "@ant-design/plots": "1.2.5",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "ahooks": "3.8.4",
     "antd": "5.11.2",
     "cookie": "0.7.0",
